--- a/less/variables.less
+++ b/less/variables.less
@@ -23,8 +23,8 @@
 @card-width: 65px;
 @card-height: 91px;
 
-@card-lg-width: @card-width * 1.5;
-@card-lg-height: @card-height * 1.5;
+@card-lg-width: @card-width * 1.4;
+@card-lg-height: @card-height * 1.4;
 
 @card-xl-width: @card-width * 2;
 @card-xl-height: @card-height * 2;
